--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script type="text/javascript" src="javascript/main.js"></script>
+  <script type="text/javascript" src="javascript/Game.js"></script>
+  <script type="text/javascript" src="javascript/Player.js"></script>
+  <script type="text/javascript" src="javascript/Background.js"></script>
+  <script type="text/javascript" src="javascript/Enemy.js"></script>
   <link rel="stylesheet" href="css/style.css">
-  <title>Proyect Game</title>
+  <title>Game Proyect</title>
 </head>
 <body>
   <div class="game-intro">
