--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
   <script type="text/javascript" src="javascript/Game.js"></script>
-  <script type="text/javascript" src="javascript/main.js"></script>
+  <script type="text/javascript" src="javascript/Bullet.js"></script>
   <script type="text/javascript" src="javascript/Background.js"></script>
   <script type="text/javascript" src="javascript/Player.js"></script>
   <script type="text/javascript" src="javascript/Enemy.js"></script>
+  <script type="text/javascript" src="javascript/main.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <title>Game Proyect</title>
 </head>
 <body>
   <div class="game-intro">
-    <button id="start-button">StartGame</button>
-    <h1>Instructions</h1>
-    <p>Use the left and right arrow to control the player and use space bar for shooting.</p>
-  
-  
+    <!-- <button id="start-button">StartGame</button> -->
+    <!-- <h1>Instructions</h1>
+      <p>Use the left and right arrow to control the player and use space bar for shooting.</p>
+    -->
   </div>
   <div>
     <canvas id="canvas" width="1000" height="600"></canvas>
